plugins {
    id "io.freefair.lombok" version "8.11"
}

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(17)
    }
}

group = 'com.reajason.javaweb'
version = ''

dependencies {
    testImplementation project(":vul:vul-webapp")
    testImplementation project(":common")
    testImplementation project(":behinder")
    testImplementation project(":godzilla")
    testImplementation project(':generator')
    testImplementation 'javax.servlet:javax.servlet-api:3.0.1'
    testImplementation 'javax.websocket:javax.websocket-api:1.1'
    testImplementation 'org.java-websocket:Java-WebSocket:1.5.7'
    testImplementation 'jakarta.servlet:jakarta.servlet-api:6.0.0'
    testImplementation 'org.hamcrest:hamcrest:3.0'
    testImplementation 'com.squareup.okhttp3:okhttp:4.12.0'
    testImplementation 'org.slf4j:slf4j-simple:2.0.16'
    testImplementation 'com.alibaba.fastjson2:fastjson2:2.0.53'
    testImplementation 'net.bytebuddy:byte-buddy:1.15.1'
    testImplementation 'org.testcontainers:testcontainers:1.20.4'
    testImplementation 'org.testcontainers:junit-jupiter:1.20.4'
    testImplementation platform('org.junit:junit-bom:5.11.3')
    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
    testImplementation 'org.junit.jupiter:junit-jupiter'
    testImplementation 'org.junit.platform:junit-platform-reporting:1.11.3'
}

tasks.withType(Test).tap {
    configureEach {
        testLogging {
            events "passed", "skipped", "failed"
        }
    }
}

tasks.withType(Test).configureEach {
    jvmArgs += [
            '--add-opens=java.base/java.util=ALL-UNNAMED',
            '--add-opens=java.xml/com.sun.org.apache.xalan.internal.xsltc.trax=ALL-UNNAMED',
            '--add-opens=java.xml/com.sun.org.apache.xalan.internal.xsltc.runtime=ALL-UNNAMED'
    ]
}

idea {
    module {
        excludeDirs -= file('build')
        excludeDirs += file('src/main')
    }
}

test {
    dependsOn(":vul:vul-webapp:war",
            ":vul:vul-webapp-expression:war",
            ":vul:vul-webapp-jakarta:war",
            ":vul:vul-springboot2:bootJar",
            ":vul:vul-springboot2:bootWar",
            ":vul:vul-springboot2-webflux:bootJar",
            ":vul:vul-springboot3:bootJar",
            ":vul:vul-springboot3-webflux:bootJar",
    )
    useJUnitPlatform()
    finalizedBy jacocoTestReport
}